03-kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: cloud
spec: {}
status: {}
