03-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-deploy
  namespace: cloud
spec:
  type: ClusterIP
  selector:
    app: cloud-deploy
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
