03-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: cloud-ingress
  namespace: cloud
spec:
  rules:
  - host: cloud.local
    http:
      paths:
      - backend:
          service:
            name: cloud-deploy
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
